[package]
name = "test-elb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# reqwest = { version = "0.12.4", features = ["json"] }
tokio = { version = "1.37.0", features = ["full"] }
structopt = "0.3.26"
openssl = { version = "0.10", features = ["vendored"] }
hyper = "1.3.1"
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["full"] }
# [profile.release]
# strip = true